--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@ window.onload = function() {
     <a href="leader.html">
         LEADERSHIP
     </a>
+    <a href="doodle.html">
+        DOODLE
+    </a>
+    <a href="tetris.html">
+        TETRIS
+    </a>
 </div>
 <div class="content">
 <h1>
@@ -375,12 +381,12 @@ document.addEventListener('click', function(e){
         // };
     </script>
     <script>
-        // window.onload = function() {
-        //     var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
-        //     var img = document.getElementById('randomImage');
-        //     var randomIndex = Math.floor(Math.random() * images.length);
-        //     img.src = images[randomIndex];
-        // };
+        window.onload = function() {
+            var images = ['image/image (1).png', 'image/image (2).png', 'image/image (3).png', 'image/image (4).png', 'image/image (5).png', 'image/image (6).png', 'image/image (7).png', 'image/image (8).png', 'image/image (9).png'];
+            var img = document.getElementById('randomImage');
+            var randomIndex = Math.floor(Math.random() * images.length);
+            img.src = images[randomIndex];
+        };
     </script>
     </body>
 </html>
