--- a/doodle.html
+++ b/doodle.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMQ4MLP54Y"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HMQ4MLP54Y');
+    </script>
     <meta charset="UTF-8">
     <title>Processing to p5.js</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
@@ -237,8 +246,7 @@ function drawScores_old() {
     </script>
 
 <audio id="myAudio" controls autoplay>
-  /* <source src="sound_doodle/evolution.mp3" type="audio/mpeg"> */
-  <source src="sound_doodle/cute.mp3" type="audio/mpeg">
+  <source src="sound_doodle/evolution.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
