--- a/project.html
+++ b/project.html
@@ -2,6 +2,15 @@
 
 <html lang="ko">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMQ4MLP54Y"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HMQ4MLP54Y');
+    </script>
 <meta charset="utf-8"/>
 <title>
    프로젝트 진행
