--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 
 <html>
 <head>
+    <meta name="google-site-verification" content="0FQ31nRdW_zrYw3eGVUBRThIigXE3GOrr06OSQ5_5qk" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMQ4MLP54Y"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HMQ4MLP54Y');
+    </script>
+
 <style>.sidebar { background-color: rgba(255, 255, 255, 0.9); }</style>
 <script>
 window.onload = function() {
