--- a/english.html
+++ b/english.html
@@ -14,6 +14,13 @@
 <meta charset="utf-8"/>
 <title>
    10년이상 수집한 미국 엔지니어들의 영어 표현 대방출
+
+   영어 표현 학습의 새로운 차원을 경험하십시오. 본 웹사이트는 사용자들이 영어 표현을 쉽고 효과적으로 학습할 수 있는 최적의 플랫폼으로 설계되었습니다.
+    다양한 컨텐츠: 전문가들이 직접 선별한 수많은 영어 표현들과 그 사용법을 다양한 주제별, 상황별로 정리하였습니다. 일상 대화에서 비즈니스, 여행, 학교 생활 등 다양한 상황에서 자주 사용되는 표현들을 체계적으로 학습할 수 있습니다.
+    실생활 예제: 각 표현에는 그것이 어떻게 사용되는지를 보여주는 실제 대화 예제가 포함되어 있습니다. 이를 통해 사용자들은 문맥 속에서 표현의 의미와 적절한 사용 방법을 쉽게 파악할 수 있습니다.
+    학습자 수준 맞춤: 초보자부터 고급 사용자까지, 각 사용자의 영어 수준에 따라 최적화된 컨텐츠를 제공합니다. 학습 경로를 추천하는 기능을 통해 사용자의 학습 과정을 더욱 효과적으로 지원합니다.
+    커뮤니티 & 피드백: 실시간 피드백 기능을 통해 사용자의 질문에 빠르게 응답합니다. 커뮤니티 기능을 통해 다른 학습자들과 정보 공유, 질문, 토론을 할 수 있습니다.
+    이외에도 다양한 추가 기능들로, 영어 학습 경험을 풍부하게 해드립니다. 지금 바로 가입하시고 영어 학습의 새로운 차원을 경험해보세요!
   </title>
 <style>
    body {
