--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ window.onload = function() {
     <a href="usa.html">
         USA
     </a>
-    <a href="ai.html">
+    <a href="AI.html">
         AI
     </a>
     <a href="leader.html">
