--- a/coding.html
+++ b/coding.html
@@ -114,7 +114,7 @@
 <ul>
 <li>
 <p>
-<strong> ChatGPT Excel VBA instruction </strong> <br><br>
+<strong> ChatGPT Excel VBA instruction 한글 </strong> <br><br>
 배열을 사용해줘 <br>
 변경전 변경후 코드를 보여주고 이전의 코드를 가능한한 많이 보여줘. <br>
 인풋박스 및 메세지박스는 영어로. 주석은 한글로 <br>
@@ -129,6 +129,21 @@
 코드 이름아래에 한글로 코드를 5줄로 요약해줘 <br>
 Thisworkbook은 사용하지말고 ActiveWorkbook으로 해줘.<br>
 </p>
+
+<p>
+    <strong> ChatGPT Excel VBA instruction English </strong> <br><br>
+    Use arrays in your code. <br>
+    Show the before and after code changes, and try to display as much of the previous code as possible. <br>
+    Use English for input boxes and message boxes, but comments should be in Korean. <br>
+    Apply DoEvents within loops. Directly select cell ranges using input boxes. <br>
+    Use this code for cell range selection: Set selectedRange = Application.InputBox("Select range for Sub Totals and Grand Total calculation:",,Selection.Address, Type:=8). <br>
+    Proceed with the code writing step by step. This code is important, so please be as accurate as possible to avoid wasting time. <br>
+    If there's something you don't understand, don't hesitate to ask questions. <br>
+    After declaring variables, insert a line of code for "SheetBackup". <br>
+    Use underscores "_" between words in the code name. <br>
+    Summarize the code in five lines in Korean right below the code name. <br>
+    Use ActiveWorkbook instead of ThisWorkbook.<br>
+    </p>
 <p>
 </p>
 </li>
