--- a/brunch.html
+++ b/brunch.html
@@ -143,7 +143,7 @@
     "어, 힘들겠지만 어떻게든 해야지 뭐. 옛날에도 잘했잖아. 할 수 있어!"
     한참을 끙끙대며 차에 실은 뒤, 우리는 곧장 집으로 돌아왔어. 그런데 정작 문제는 집에 도착해서였지. 무거운 세탁기를 집까지 옮기고, 제자리에 놓는 일이 만만치 않더라고.
     "여보, 너무 힘들다... 그냥 설치 기사 부를까?"
-    "야, 우리가 해야지. 돈 주고 하긴 싫어. 조금만 더 힘내자!"
+    "아니, 우리가 해야지. 돈 주고 하긴 싫어. 조금만 더 힘내자!"
     결국 2시간 넘게 씨름한 끝에 세탁기를 제자리에 놓을 수 있었어. 등줄기에 식은땀이 흐르긴 했지만 그래도 해냈다는 성취감에 마음이 뿌듯했지.
     이어서 급수관과 배수관을 연결하고, 전원을 켰어. 모든 게 순조로워 보였지. 그런데 뚜껑을 열고 세탁물을 넣으려는데 뭔가 이상한 거야. 세제를 넣고 작동시켜도 세탁기가 돌아가질 않는 거야.
     "어떡하지? 설마 우리가 잘못 설치한 건가?"
