--- a/brunch.html
+++ b/brunch.html
@@ -184,7 +184,7 @@
 
 <section>
 
-    <img src="image/brunch/snake.jpg" alt="" width="100%">
+    <img src="image/brunch/snake.jpeg" alt="" width="100%">
     <h3>
         뱀과 메리의 사랑?
         </h3>
