--- a/brunch/diary/brunch sub 0004.html
+++ b/brunch/diary/brunch sub 0004.html
@@ -111,7 +111,7 @@
     그 후로 메리와 나는 매일같이 그 잔디밭을 지나며 뱀과 마주쳤다. 어느새 그 작은 뱀은 우리 일상의 일부가 되어버렸다. 메리에게는 놀이 상대 같기도 했고, 나에게는 신기한 구경거리 같기도 했다.
     그렇게 한 주가 흘렀다. 변함없이 잔디밭에는 그 뱀이 있었고, 메리는 여전히 꼬리 흔들며 인사했다. 하루는 문득 궁금해졌다. 뱀에게도 감정이 있을까? 우리를 알아볼까? 하지만 그건 영원히 알 수 없는 일이겠지.
     오늘도 메리와 함께 잔디밭에 갔다. 그런데 뱀이 보이지 않았다. 메리가 킁킁거리며 뱀을 찾아 헤맸지만 끝내 찾지 못했다. 
-    <img src="image/brunch/snake.jpg" alt="" width="100%">
+    <img src="image/brunch/snake.jpeg" alt="" width="100%">
     내일 또 올 수 있겠지. 설마 어디로 간 건 아니겠지. 그저 평범한 하루의 일과일 뿐인데도, 작은 뱀 한 마리가 없어졌다는 사실이 묘하게 마음에 걸렸다.
     다음 날, 그 다음 날에도 뱀은 보이지 않았다. 메리의 실망한 눈빛을 보니 나도 모르게 서운한 마음이 들었다. 겨우 뱀 한 마리 가지고 뭘 그리 실망하고 그러나 싶었지만, 이상하게 손에 익은 일상의 한 조각이 사라진 것 같아 적응이 안 됐다.
     그래도 세상은 멈추지 않고 흘러갔다. 메리와 나는 여전히 매일 산책을 나섰고, 똑같은 잔디밭을 지나갔다. 더는 뱀은 보이지 않았지만, 어쩌면 그것이 자연의 섭리인지도 모른다. 만남이 있으면 헤어짐도 있는 법이니까.
