--- a/brunch.html
+++ b/brunch.html
@@ -184,35 +184,35 @@
 
 <section>
 
-    <img src="image/brunch/snake.jpeg" alt="" width="100%">
+    <img src="image/brunch/snake.jpeg" alt="" width="100%"><br>
     <h3>
         뱀과 메리의 사랑?
         </h3>
     <ul>
-            <a href="brunch/diary/brunch sub 0004.html.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br>
+            <a href="brunch/diary/brunch sub 0004.html.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
             </a>
 
 
-        <img src="image/brunch/babyflower.jpg" alt="" width="100%">
+        <img src="image/brunch/babyflower.jpg" alt="" width="100%"><br>
 <h3>
     꽃봉우리.. 봄이다..
     </h3>
 <ul>
-        <a href="brunch/diary/brunch sub 0003.html.html" target="_blank"> 2024년4월23일 화요일 일기 바로가기<br>
+        <a href="brunch/diary/brunch sub 0003.html.html" target="_blank"> 2024년4월23일 화요일 일기 바로가기<br><br>
         </a>
 
         <img src="image/brunch/washer.jpg" alt="" width="100%"> <br>
 <h3>
     삼성 세탁기 설치 
     </h3>
-    <a href="brunch/diary/brunch sub 0002.html.html" target="_blank"> 2024년4월22일 월요일 일기 바로가기<br>
+    <a href="brunch/diary/brunch sub 0002.html.html" target="_blank"> 2024년4월22일 월요일 일기 바로가기<br><br>
     </a>
     
     <img src="image/brunch/foxhills.jpg" alt="" width="100%"><br>
 <h3>
     골프 (Fox Hills Classic)
    </h3>
-    <a href="brunch/diary/brunch sub 0001.html.html" target="_blank"> 2024년4월21일 일요일 일기 바로가기<br>
+    <a href="brunch/diary/brunch sub 0001.html.html" target="_blank"> 2024년4월21일 일요일 일기 바로가기<br><br>
     </a>
 </ul>
 </section>     
