--- a/brunch.html
+++ b/brunch.html
@@ -189,7 +189,7 @@
             골프 공 속살이 궁금하다.
             </h3>    
                 <a href="brunch/diary/brunch sub 20240425_02.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/golfballinside1.*" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+                    <img src="image/brunch/golfballinside1.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
                 </a>
 
         <h3>
