--- a/brunch/diary/brunch sub 20240425_03.html
+++ b/brunch/diary/brunch sub 20240425_03.html
@@ -108,7 +108,7 @@
     
     
     골프공을 절단해 놓은 사진을 보니 신기한 느낌이 들었다. 
-    <img src="../../image/brunch/golfballinside2.*" alt="" width="100%">
+    <img src="../../image/brunch/golfballinside2.jpg" alt="" width="100%">
     평소 골프를 좋아해서 골프공에 대해 어느 정도 알고 있다고 생각했는데, 막상 이렇게 내부를 직접 보니 새로운 면이 보이는 듯했다. 2피스, 3피스, 4피스 골프공의 구조가 각각 다르다는 건 알고 있었지만, 실제로 절단면을 통해 비교해 본 건 처음이었다.
 사진 속 골프공들은 마치 생물학 시간에 해부한 개구리 모형 같았다. 겉으로 보기엔 모두 똑같아 보이는 공이지만, 내부는 제각각 다른 모습을 하고 있었다. 2피스 공은 심플한 2개의 층으로 나뉘어져 있었고, 3피스와 4피스 공은 좀 더 복잡한 구조를 띠고 있었다. 공학적으로 설계된 정교함이 돋보였다.
 골프공 내부를 관찰하다 보니, 문득 골프공 선택에 대한 나의 기준이 떠올랐다. 사실 나는 주로 2피스 골프공만 구매해서 사용하는 편이다. 3피스나 4피스 공은 너무 가격이 비싸서 선뜻 손이 가지 않는다. 2피스 공으로도 충분히 즐길 만한데 굳이 비싼 공을 살 필요가 있나 싶었다.
