Update brunch sub 20240427_01.html

--- a/brunch/diary/brunch sub 20240427_01.html
+++ b/brunch/diary/brunch sub 20240427_01.html
@@ -120,10 +120,10 @@
     나는 2주에 한 번씩 정기적으로 열리는 골프 리그에 참가하고 있다.
     골프장에 도착하자마자 상쾌한 공기가 폐부를 가득 채웠다. 클럽하우스에서 간단히 스트레칭을 한 후, 첫 번째 티잉 그라운드로 향했다. 시원한 바람이 볼을 스치고 지나갔다. 딱 좋은 골프 날씨였다.
     코스는 전반적으로 잘 관리되어 있었다. 페어웨이의 잔디는 깔끔하게 깎여있었고, 그린은 부드러운 양탄자처럼 매끄러웠다. 나무들은 신록의 잎사귀로 가득했고, 군데군데 색색의 야생화들이 피어있었다. 자연의 아름다움이 골프장 곳곳에서 느껴졌다.
-    특히 인상 깊었던 건 연못가에서 본 오리 가족의 모습이었다. 
+    특히 인상 깊었던 건 연못가에서 본 거위 가족의 모습이었다. 
     <img src="../../image/brunch/20240427_bird1.jpeg" alt="" width="100%">
     <img src="../../image/brunch/20240427_bird2.jpeg" alt="" width="100%">
-    암컷 오리를 따라 줄지어 헤엄치는 아기 오리들의 모습이 너무나 사랑스러웠다. 오리들은 사람들의 존재에 아랑곳하지 않고 여유롭게 물 위를 미끄러졌다. 자연 속 작은 생명들의 평화로운 일상을 엿볼 수 있는 소중한 순간이었다.
+    엄마를 따라 줄지어 헤엄치는 아기 거위들의 모습이 너무나 사랑스러웠다. 사람들의 존재에 아랑곳하지 않고 여유롭게 물 위를 미끄러졌다. 자연 속 작은 생명들의 평화로운 일상을 엿볼 수 있는 소중한 순간이었다.
     그러나 골프 실력은 여전히 부족했다. 첫 번째 홀에서 티 샷을 날렸지만, 공은 페어웨이를 벗어나 러프에 빠지고 말았다. 두 번째 샷에서도 그린을 맞히지 못했다. 결국 더블 보기를 기록하고 말았다. 다음 홀에서도 비슷한 실수가 이어졌다.
     하지만 모든 게 순탄하지는 않았다. 파3 홀에서는 기분 좋은 일이 있었다. 티 샷이 홀 근처에 떨어졌고, 퍼팅에 성공하면서 파를 기록했다. 스코어 카드를 제출하니 스타벅스 5불 기프트카드를 상품으로 받을 수 있었다. 작은 성취감에 기분이 좋아졌지만, 전체적인 실력은 여전히 아쉬웠다.
     골프를 마치고 스코어를 집계해보니 총 108타를 기록했다. 
