--- a/brunch.html
+++ b/brunch.html
@@ -195,7 +195,7 @@
     <ul>
 
 
-        <h3>최악의 골프 스코어</h3>    
+        <h3>골프치기 좋은 날</h3>    
                 <a href="brunch/diary/brunch sub 20240427_01.html" target="_blank"> 2024년4월27일 토요일 일기 바로가기<br><br>
                     <img src="image/brunch/20240427_golfcourse.jpeg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
                 </a>
