Update brunch sub 0003.html

--- a/brunch/diary/brunch sub 0003.html
+++ b/brunch/diary/brunch sub 0003.html
@@ -1,4 +1,14 @@
-<!DOCTYPE html> <html lang="ko"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<!DOCTYPE html> <html lang="ko"> <head> 
+    
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
+    <!-- End Google Tag Manager -->
+
+    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>인공지능과 함께 쓰는 일기</title> 
 
         <style>
@@ -103,12 +113,20 @@
 
     2024년4월23일 화요일<br>
     (Written by Claude 3.0 Opus) <br>
+    
     <p>오늘은 봄기운이 완연한 날이었다. 아침 일찍 눈을 뜨자마자 창밖으로 따스한 햇살이 쏟아져 들어왔다. 겨우내 웅크리고 있던 몸과 마음이 봄의 기운에 살며시 고개를 든다.
     설레는 마음을 안고 집 앞 정원으로 나섰다. 매화나무 아래로 다가가 자세히 들여다보니 어느새 꽃봉오리들이 고개를 내밀기 시작했다. 앙증맞은 크기의 초록빛 봉오리 하나하나가 생명력 넘치는 기운으로 가득 차 있었다.
     <img src="../../image/brunch/babyflower.jpg" alt="Baby Flower" width="100%">
     카메라를 꺼내 들고 매화나무 가지에 올라탄 꽃봉오리를 향해 렌즈를 겨눴다. 줌인하여 가까이 다가가니 꽃봉오리의 섬세한 결이 더욱 선명하게 보인다. 살며시 부풀어 오른 꽃잎들이 봄바람에 나부끼고 있었다. 이 작은 봉오리 속에 우주의 신비가 응축되어 있는 것만 같다.
     셔터를 눌러 이 경이로운 순간을 사진에 담는다. 지금 이 순간을 놓치기 싫어 꽃봉오리를 향해 셔터를 연신 눌러댄다. 매화나무 아래 서서 꽃봉오리를 감상하고 있자니 절로 마음이 평온해진다. 
-    다시 사진을 확인해보니 꽃봉오리의 모습이 그대로 담겨있다. 현미경으로 들여다보는 듯 섬세하게 표현된 꽃봉오리의 결이 너무나 아름답다. 날이 갈수록 발전하는 스마트폰 카메라 기술 덕분에 이렇게 멋진 사진을 찍을 수 있게 되었다. 문득 초등학생 시절 필름카메라로 찍었던 흐릿한 사진들이 떠오른다. 격세지감을 느낀다.
+    다시 사진을 확인해보니 꽃봉오리의 모습이 그대로 담겨있다. 
+    <img src="../../image/brunch/F001.jpeg" alt="Baby Flower" width="100%">
+    <img src="../../image/brunch/F002.jpeg" alt="Baby Flower" width="100%">
+    <img src="../../image/brunch/F003.jpeg" alt="Baby Flower" width="100%">
+    <img src="../../image/brunch/F004.jpeg" alt="Baby Flower" width="100%">
+    <img src="../../image/brunch/F005.jpeg" alt="Baby Flower" width="100%">
+    <img src="../../image/brunch/F006.jpeg" alt="Baby Flower" width="100%">
+    현미경으로 들여다보는 듯 섬세하게 표현된 꽃봉오리의 결이 너무나 아름답다. 날이 갈수록 발전하는 스마트폰 카메라 기술 덕분에 이렇게 멋진 사진을 찍을 수 있게 되었다. 문득 초등학생 시절 필름카메라로 찍었던 흐릿한 사진들이 떠오른다. 격세지감을 느낀다.
     매화나무를 벗어나 정원을 천천히 거닐었다. 그 사이 웬 고양이 한 마리가 담벼락 너머로 살금살금 기어올라 울타리에 앉았다. 봄기운을 만끽하려는 듯 기지개를 켜더니 느릿느릿 꼬리를 흔들기 시작한다. 덩달아 기분이 좋아진 나는 살며시 미소를 머금었다. 길고 긴 겨울을 지나온 생명들이 모두 봄을 즐기는 듯하다.
     봄이 오는 걸 느끼면 매번 들뜨고 감격스러워진다. 움츠렸던 어깨를 펴고 긴 겨울을 이겨낸 나 자신을 토닥이고 싶어진다. 남은 인생도 꽃봉오리처럼 희망차게 피어날 수 있을 것이란 희망을 품어본다. 나이가 들어갈수록 봄마다 느끼는 설렘은 조금씩 덜해지는 것 같다. 하지만 그럴수록 봄을 음미하고 즐기려 애쓴다.
     꽃봉오리에 시선을 빼앗겨 한참을 서성이다 문득 정신을 차려보니 어느덧 해가 중천에 떠올랐다. 이제 슬슬 일상으로 복귀할 시간이다. 매화나무를 향해 작별 인사를 건네고 집 안으로 발걸음을 옮긴다.
