Update brunch sub 20240427_01.html

--- a/brunch/diary/brunch sub 20240427_01.html
+++ b/brunch/diary/brunch sub 20240427_01.html
@@ -126,7 +126,7 @@
 
     <p>...</p>
     <video width="640" height="360" controls>
-      <source src="../../image/brunch/bird1.mov" type="video/quicktime">
+      <source src="../../image/brunch/20240426 bird_video.mov" type="video/quicktime">
       Your browser does not support the video tag.
     </video>
     <p>...</p>
