Update brunch sub 20240427_01.html

--- a/brunch/diary/brunch sub 20240427_01.html
+++ b/brunch/diary/brunch sub 20240427_01.html
@@ -125,12 +125,12 @@
     <img src="../../image/brunch/20240427_bird2.jpeg" alt="" width="100%">
 
     <p>...</p>
-    <video width="640" height="360" controls>
+    <video width="100%" controls>
       <source src="../../image/brunch/20240426 bird_video.mov" type="video/quicktime">
       Your browser does not support the video tag.
     </video>
     <p>...</p>
-
+        
     암컷 거위를 따라 줄지어 헤엄치는 거위들의 모습이 너무나 사랑스러웠다. 거위들은 사람들의 존재에 아랑곳하지 않고 여유롭게 물 위를 미끄러졌다. 자연 속 작은 생명들의 평화로운 일상을 엿볼 수 있는 소중한 순간이었다.
     그러나 골프 실력은 여전히 부족했다. 첫 번째 홀에서 티 샷을 날렸지만, 공은 페어웨이를 벗어나 러프에 빠지고 말았다. 두 번째 샷에서도 그린을 맞히지 못했다. 결국 더블 보기를 기록하고 말았다. 다음 홀에서도 비슷한 실수가 이어졌다.
     하지만 모든 게 순탄하지는 않았다. 파3 홀에서는 기분 좋은 일이 있었다. 티 샷이 홀 근처에 떨어졌고, 퍼팅에 성공하면서 파를 기록했다. 스코어 카드를 제출하니 스타벅스 5불 기프트카드를 상품으로 받을 수 있었다. 작은 성취감에 기분이 좋아졌지만, 전체적인 실력은 여전히 아쉬웠다.
