Update brunch sub 20240427_01.html

--- a/brunch/diary/brunch sub 20240427_01.html
+++ b/brunch/diary/brunch sub 20240427_01.html
@@ -126,7 +126,7 @@
 
     
 <p>...</p>
-<video width="100%" controls poster="../../image/brunch/20240426_bird_video_poster.jpg" style="width: 100%;"></video>
+<video width="100%" controls poster="../../image/brunch/20240426_bird_video_poster.jpg"></video>
   <source src="../../image/brunch/20240426 bird_video.mov" type="video/quicktime">
   Your browser does not support the video tag.
 </video>
