--- a/AI_News.html
+++ b/AI_News.html
@@ -133,7 +133,26 @@
 
 
 
+    <ul>
+        <li>
+        <p>
+        <strong><h2></h3>초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</h3><br><br>
+                </strong>
+                <img src="../../image/ai_news/ai news sub 20240428_03.jpg" alt="" width="100%">           
+                
+                중국 기업 Astribot이 최근 공개한 AI 기반 휴머노이드 로봇 S1의 영상이 업계의 이목을 집중시키고 있다. 매주 새로운 휴머노이드 로봇이 발표되고 있지만, S1만큼 빠르고 정밀하게 움직이는 로봇은 아직 보기 드문 수준이기 때문이다.<br><br>
+                Astribot에 따르면, S1은 최대 초당 10미터의 속도로 움직임을 실행할 수 있으며, 각 팔에 10kg의 하중을 처리할 수 있다. 실제로 공개된 영상에서 S1은 와인잔 더미 밑에서 식탁보를 잡아당기는 놀라운 속도를 보여주었다. 하지만 단순히 빠를 뿐만 아니라 와인을 따르고, 오이를 깎고, 프라이팬에서 샌드위치를 뒤집는 등 섬세하고 정교한 움직임도 선보였다.<br><br>
+                S1의 또 다른 특징은 인간의 움직임을 모방하는 데 탁월하다는 점이다. 이는 S1이 학습 능력이 뛰어난 로봇임을 시사한다. 다만 영상에서는 S1의 하체가 공개되지 않아 실제 이동 능력에 대해서는 의문이 제기되고 있다.<br><br>
+                Astribot은 2022년 중국 선전에 설립된 신생 기업으로, S1의 개발에는 약 1년이 소요되었으며 올해 말 상용화를 목표로 하고 있다. 모회사인 스타더스트 인텔리전스는 텐센트 로보틱스 연구소 출신의 Lai Jie가 설립한 것으로 알려졌다.<br><br>
+                회사 측은 'Ad astra per aspera'라는 라틴어 속담에서 Astribot이라는 이름을 따왔다고 설명했다. 이는 '역경을 통해 별에 도달한다'는 뜻으로, AI 로봇 기술 개발과 대중화에 대한 회사의 의지를 상징한다.<br><br>
+                업계에서는 S1의 등장으로 휴머노이드 로봇 시장의 경쟁이 한층 치열해질 것으로 전망하고 있다. Astribot이 기술력을 바탕으로 시장에서 입지를 다질 수 있을지 주목된다. 아직 S1의 구체적 스펙이나 가격 등 상세 정보는 공개되지 않았지만, 상용화가 성공적으로 이뤄진다면 휴머노이드 로봇의 대중화를 앞당기는 계기가 될 수 있을 전망이다.<br><br>
 
+                <a href="https://ko.root-nation.com/ua/articles-ua/tech-ua/ua-phi-3-mini/" target="_blank"> 2024년04월28일 : 초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</a> <br>  
+        </p>
+
+        </li>
+        <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
+        </ul>
 
     <ul>
         <li>
