--- a/AI_News.html
+++ b/AI_News.html
@@ -139,9 +139,23 @@
         <strong><h2></h3>초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</h3><br><br>
                 </strong>
                 
-                <div v-for="i in 16" :key="i">
-                    <img :src="'../../image/ai_news/ai news sub 20240428_03/ai news sub 20240428_03_' + (i-1).toString().padStart(4, '0') + '.jpg'" alt="" width="100%">
-                  </div>
+                <img src="../../image/ai_news/ai news sub 20240428_03_0010.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0020.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0030.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0040.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0050.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0060.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0070.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0080.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0090.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0100.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0110.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0120.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0130.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0140.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0150.jpg" alt="" width="100%">
+                <img src="../../image/ai_news/ai news sub 20240428_03_0160.jpg" alt="" width="100%">
+            
                 중국 기업 Astribot이 최근 공개한 AI 기반 휴머노이드 로봇 S1의 영상이 업계의 이목을 집중시키고 있다. 매주 새로운 휴머노이드 로봇이 발표되고 있지만, S1만큼 빠르고 정밀하게 움직이는 로봇은 아직 보기 드문 수준이기 때문이다.<br><br>
                 Astribot에 따르면, S1은 최대 초당 10미터의 속도로 움직임을 실행할 수 있으며, 각 팔에 10kg의 하중을 처리할 수 있다. 실제로 공개된 영상에서 S1은 와인잔 더미 밑에서 식탁보를 잡아당기는 놀라운 속도를 보여주었다. 하지만 단순히 빠를 뿐만 아니라 와인을 따르고, 오이를 깎고, 프라이팬에서 샌드위치를 뒤집는 등 섬세하고 정교한 움직임도 선보였다.<br><br>
                 S1의 또 다른 특징은 인간의 움직임을 모방하는 데 탁월하다는 점이다. 이는 S1이 학습 능력이 뛰어난 로봇임을 시사한다. 다만 영상에서는 S1의 하체가 공개되지 않아 실제 이동 능력에 대해서는 의문이 제기되고 있다.<br><br>
