--- a/AI_News.html
+++ b/AI_News.html
@@ -138,7 +138,7 @@
         <p>
         <strong><h2></h3>초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</h3><br><br>
                 </strong>
-                
+                <img src="../../image/ai_news/ai news sub 20240428_03.jpg" alt="" width="100%">   
                 <img src="../../image/ai_news/ai news sub 20240428_03_0010.jpg" alt="" width="100%">
                 <img src="../../image/ai_news/ai news sub 20240428_03_0020.jpg" alt="" width="100%">
                 <img src="../../image/ai_news/ai news sub 20240428_03_0030.jpg" alt="" width="100%">
