--- a/brunch.html
+++ b/brunch.html
@@ -197,7 +197,7 @@
 
         <h3>아내가 방충망을 고친다.</h3>    
                 <a href="brunch/diary/brunch sub 20240429_01.html" target="_blank"> 2024년4월29일 월요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240429_bug.jpeg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+                    <img src="image/brunch/20240429_bug.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
                 </a>
 
         <h3>골프치기 좋은 날</h3>    
