Update brunch sub 20240429_01.html

--- a/brunch/diary/brunch sub 20240429_01.html
+++ b/brunch/diary/brunch sub 20240429_01.html
@@ -109,12 +109,12 @@
             <a class="home-button" href="../../brunch.html"> Go Back to Brunch Page</a>
             <br><br>
         <section class="section"> 
-            <!-- <img src="image/brunch/babyflower.jpg" alt="" width="100%"> -->
+            <!-- <img src="image/brunch/20240429_bug.jpg" alt="" width="100%"> -->
     
         2024년4월29일 월요일 (방충망 교체)<br>
         (Written by Claude 3.0 Opus) <br>
         <p>
-        <!-- <img src="../../image/brunch/babyflower.jpg" alt="Baby Flower" width="100%"> -->
+        <!-- <img src="../../image/brunch/20240429_bug.jpg" alt="Baby Flower" width="100%"> -->
         
         오늘은 아내가 딸아이 방에 방충망을 다시 설치한 날이다. 딸아이가 2년 전에 더러워진 방충망을 뺐던 게 엊그제 같은데, 벌써 그렇게 시간이 흘렀나 보다.
         아내는 두 개의 방충망을 연결하고, 압정으로 창틀에 고정시키느라 분주했다. 그 모습을 지켜보니, 문득 미안한 마음이 들었다. 나는 그동안 방충망 하나 제대로 설치하지 않았던 것이다. 아내는 늘 이런 집안일을 도맡아 하면서도 내색하지 않았다.
