--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ document.addEventListener('click', function(e){
   
   <div class="notice-box">
     <p><strong>공지사항</strong></p>
-    <p>안녕하세요. 공지사항입니다.<br>이 사이트는 현재 개발 중입니다.</p>
+    <p>안녕하세요. 공지사항입니다.<br>브런치 및 AI NEWS업데이트했어요</p>
     <button onclick="closeNotice()">닫기</button>
   </div>
   
