--- a/AI_News.html
+++ b/AI_News.html
@@ -144,6 +144,7 @@
               <img src="../../image/ai_news/ai news sub 20240428_03.jpg" alt="" width="100%" class="static-image">
               <img src="../../image/ai_news/ai news sub 20240428_03/ai news sub 20240428_03_Animdated.gif" alt="" width="100%" class="animated-image" style="display: none;">
             </div>
+            위의 이미지를 클릭하면 움직이고 또 클릭하면 멈춤니다.<br><br>
             중국 기업 Astribot이 최근 공개한 AI 기반 휴머노이드 로봇 S1의 영상이 업계의 이목을 집중시키고 있다. 매주 새로운 휴머노이드 로봇이 발표되고 있지만, S1만큼 빠르고 정밀하게 움직이는 로봇은 아직 보기 드문 수준이기 때문이다.<br><br>
             Astribot에 따르면, S1은 최대 초당 10미터의 속도로 움직임을 실행할 수 있으며, 각 팔에 10kg의 하중을 처리할 수 있다. 실제로 공개된 영상에서 S1은 와인잔 더미 밑에서 식탁보를 잡아당기는 놀라운 속도를 보여주었다. 하지만 단순히 빠를 뿐만 아니라 와인을 따르고, 오이를 깎고, 프라이팬에서 샌드위치를 뒤집는 등 섬세하고 정교한 움직임도 선보였다.<br><br>
             S1의 또 다른 특징은 인간의 움직임을 모방하는 데 탁월하다는 점이다. 이는 S1이 학습 능력이 뛰어난 로봇임을 시사한다. 다만 영상에서는 S1의 하체가 공개되지 않아 실제 이동 능력에 대해서는 의문이 제기되고 있다.<br><br>
