Update drone sub 20240430_01.html

--- a/drone/drone sub 20240430_01.html
+++ b/drone/drone sub 20240430_01.html
@@ -206,7 +206,7 @@
         작고 가볍습니다. Air 3는 접었을 때 크기가 8 x 3.5 x 3.25인치(대형 커피 보온병 크기)이고 무게는 1.5파운드입니다. 플라이 모어 콤보와 함께 제공되는 RC 2 컨트롤러는 빵 한 조각보다 약간 크고 두께는 약 2배입니다. 둘 다 카메라 가방에 쉽게 넣거나 지갑이나 배낭에 넣을 수 있습니다.<br>
         그것은 큰 범위를 가지고 있습니다. Air 3는 최대 12마일까지 비행할 수 있지만 연방 규정에 따르면 드론을 시야 내에 유지해야 하므로 해당 범위를 테스트하는 경우는 거의 없다고 해도 무방합니다. DJI의 OccuSync 4.0 시스템을 통해 비디오 및 리모콘 데이터를 전송하는데, 이는 신뢰할 수 있는 것으로 확인되었습니다.<br>
         DJI의 컨트롤러 소프트웨어는 강력합니다. RC 2 컨트롤러에서 즉시 사용할 수 있는 DJI Fly 앱을 사용하여 드론 보정, 카메라 설정, GPS 지도 및 지능형 비행 모드를 사용할 수 있습니다. 또한 모든 비행 정보(반복 촬영을 시도하는 경우 재생할 수 있음)를 추적하고 해당 지역의 비행 제한 사항에 대해 경고하며 내장된 비디오 편집 도구를 제공합니다. 컨트롤러 자체 또는 휴대폰의 모바일 앱을 통해.<br>
-        컨트롤러는 사용하기 쉽습니다. 테스트에서 드론은 더 빠르고 민첩한 스포츠 모드로 비행하는 동안에도 우리의 명령에 민첩하게 반응했습니다. 또한 컨트롤러에 내장된 휠을 사용하여 드론 카메라의 기울기를 쉽게 조정하고 카메라가 사진을 찍거나 촬영을 시작하도록 요청하는 전용 버튼을 누르는 것이 쉽다는 것을 알았습니다.<br>
+        컨트롤러는 사용하기 쉽습니다. 테스트에서 드론은 더 빠르고 민첩한 스포츠 모드로 비행하는 동안에도 우리의 명령에 민첩하게 반응했습니다. 또한 컨트롤러에 내장된 휠을 사용하여 드론 카메라의 기울기를 쉽게 조정하고 카메라가 사진을 찍거나 촬영을 시작하도록 요청하는 전용 버튼을 누르는 것이 쉽다는 것을 알았습니다.<br><br>
 
         <span style="color: #2205c9;"><strong> DJI Mavic 3 Pro </strong></span>는 우리가 선택한 제품과 많은 기능을 공유 하지만 더 나은 이미지 품질과 추가 망원 렌즈를 위해 훨씬 더 많은 비용을 지불할 의향이 있다면 업그레이드할 가치가 있습니다. 메인 카메라는 더 선명하고 다채로운 비디오와 사진을 만드는 데 도움이 되는 Hasselblad 브랜드 광각 렌즈가 장착된 대형 Four Thirds 센서를 제공합니다.<br>
         전방향 센서 덕분에 장애물을 쉽게 통과할 수 있습니다. Mavic 3 Pro를 모형비행기 경기장의 드론 경주 게이트를 통해 비행했을 때, 게이트를 쉽게 탐색하고 금속 기둥으로 비행하기 전에 스스로 멈췄습니다.<br>
@@ -217,7 +217,7 @@
         배터리 수명은 테스트 그룹에서 최고 수준입니다. 매빅 3 Pro의 명시된 배터리 수명은 43분으로 Air 3의 비행 시간 46분에 비해 약간 낮지만, 배터리 교체를 위해 착륙하기 전에 만족스러운 영상을 캡처하기에는 여전히 충분합니다. .<br>
         비행 시간을 통해 최대 17.3마일 떨어진 곳까지 드론을 비행할 수 있습니다. 하지만 미국 연방 규정에 따르면 귀하 또는 귀하와 통신 중인 관측자는 항상 드론을 확대되지 않은 시야 내에 있어야 합니다. 대부분의 비행에서 범위 제한을 테스트하지 않을 것 같습니다.<br>
         가장 작은 드론은 아니지만 가지고 다닐 수 있을 만큼 쉽습니다. 매빅 3 Pro는 Air 3보다 약간 크지만 휴대성도 비슷합니다. 무게는 2파운드이며 총구 모양의 카메라 덮개를 제거하는 것 외에는 비행 전에 조립할 필요가 없습니다.<br>
-        DJI는 또한 Apple ProRes 422 HQ 코덱을 지원하고 내부 스토리지를 1TB 솔리드 스테이트 드라이브로 업그레이드하는 DJI Mavic 3 Pro Cine 이라는 업그레이드 버전을 판매합니다 . 하지만 해당 버전은 일반 Fly More 키트와 DJI RC Pro 컨트롤러(더 밝은 화면, 향상된 전송 비트 전송률 및 기타 몇 가지 기능을 갖춘 DJI RC의 개선 사항)가 모두 포함된 프리미엄 콤보의 일부로만 구입할 수 있습니다. 특징). 해당 패키지의 가격은 5,000달러 미만이므로 많은 매니아들의 범위를 벗어납니다.<br><br>
+        DJI는 또한 Apple ProRes 422 HQ 코덱을 지원하고 내부 스토리지를 1TB 솔리드 스테이트 드라이브로 업그레이드하는 DJI Mavic 3 Pro Cine 이라는 업그레이드 버전을 판매합니다. 하지만 해당 버전은 일반 Fly More 키트와 DJI RC Pro 컨트롤러(더 밝은 화면, 향상된 전송 비트 전송률 및 기타 몇 가지 기능을 갖춘 DJI RC의 개선 사항)가 모두 포함된 프리미엄 콤보의 일부로만 구입할 수 있습니다. 특징). 해당 패키지의 가격은 5,000달러 미만이므로 많은 매니아들의 범위를 벗어납니다.<br><br>
 
         <span style="color: #2205c9;"><strong> DJI Mini 3 </strong></span> 는 DJI의 가장 저렴한 드론이 아니며(이 영광은 이제 Mini 2 SE 에 속함 ) Air 3만큼 아름다운 이미지를 생성하지는 않지만 저렴한 가격, 인상적인 기능(4K 비디오 포함) , 작은 형태로 인해 초보자에게 탁월한 선택이 됩니다.<br>
         비행에 대한 좋은 소개를 제공합니다. 이 드론은 버튼 하나만 누르면 이륙, 착륙, 귀환이 가능하다. 또한 공중에서 정지 상태로 호버링할 수 있을 만큼 지능적인 포지셔닝 시스템을 갖추고 있습니다(포지셔닝에 사용하는 유일한 센서는 착륙을 돕는 하향 센서입니다). 그리고 포함된 배터리를 사용한 38분의 비행 시간은 이 가격에 꽤 괜찮은 수준입니다.<br>
