--- a/brunch/diary/brunch sub 20240501_02.html
+++ b/brunch/diary/brunch sub 20240501_02.html
@@ -111,19 +111,20 @@
         <section class="section"> 
             <!-- <img src="image/brunch/babyflower.jpg" alt="" width="100%"> -->
     
-        2024년5월01일 월요일 (지붕에서 떨어질뻔 하다)<br>
+        2024년5월01일 월요일 (개미 통로를 막아라)<br>
         (Written by Claude 3.0 Opus) <br>
         <p>
-        <!-- <img src="../../image/brunch/babyflower.jpg" alt="Baby Flower" width="100%"> -->
 
-        <img src="../../image/brunch/20240501_roof.jpg" alt="" width="100%">
-        오늘은 날씨가 참 좋았다. 겨우내 웅크리고 있던 나뭇가지들이 기지개를 켜는 것 같았다. 햇살은 따스하고, 바람은 상쾌했다.
-        나는 오랜만에 지붕 청소를 하기로 마음먹었다. 겨울 동안 낙엽들이 지붕에 수북이 쌓여있었기 때문이다. 사다리를 타고 조심스럽게 지붕 위로 올라갔다. 익숙하지 않은 높이에 살짝 아찔했지만, 낙엽들을 쓸어내려야 한다는 생각에 열심히 움직였다.
-        그런데 청소를 하던 중 갑자기 사다리가 미끄러지는 것이 아닌가. 순간 균형을 잃고 사다리에서 떨어질 뻔했다. 다행히 미리 안전줄을 매어 놓아서 큰 부상은 면했지만, 그래도 가슴이 철렁 내려앉는 느낌이었다.
-        하마터면 큰일 날 뻔했다는 생각에 온몸에 식은땀이 흘렀다. 하지만 무사히 지붕 청소를 마칠 수 있어서 안도의 한숨을 내쉬었다. 낙엽들을 말끔히 치우고 나니 지붕이 한결 깨끗해졌다. 지붕을 바라보니 뿌듯함이 밀려왔다.
-        사실 지붕 청소는 꽤 위험한 작업이다. 높은 곳에서 작업해야 하기 때문에 안전사고의 위험이 크다. 나 역시 오늘 아찔한 순간을 경험했다. 앞으로는 더욱 주의해야겠다.
-        하지만 청소를 마치고 나니 집이 한층 더 산뜻해진 것 같아 기분이 좋았다. 봄맞이 대청소의 일환으로 지붕 청소를 한 것은 잘한 선택이었다.
-        이제 봄이 완연해졌다. 따스한 봄볕을 맞으며 상쾌한 바람을 느끼니 절로 기분이 좋아진다. 겨우내 움츠렸던 우리 집도 기지개를 펴는 것 같다.
+        <img src="../../image/brunch/20240501_tile1.jpg" alt="" width="100%">
+        우리 집은 1980년대 지은 집이라 군데군데 세월의 흔적이 역력하다. 특히 시멘트로 된 타일 부분의 마감재가 떨어져 나간 곳이 많아 보기에 좋지 않았다.
+        최근 들어 개미가 많이 출몰하기 시작했다. 부엌은 물론 거실과 안방에서도 개미를 심심치 않게 볼 수 있었다. 살충제를 뿌려도 잠깐이었고, 근본적인 해결책이 필요했다.
+        집 안을 꼼꼼히 살펴보니 개미들이 타일 마감재가 떨어진 곳에서 나오는 것 같았다. 아마도 벽과 타일 사이의 빈틈이 개미들의 왕래 통로가 되는 모양이었다.
+        아내의 반복되는 요청으로 나는 이 문제를 해결해야했다. 어제 홈디포에 들렀을 때 실리콘을 몇 개 구매해 두었다.
+        10불이나 하는 실리콘 가격이 새삼 놀라웠다.
+        나는 떨어져 나간 타일 부분을 하나하나 실리콘으로 메워나갔다. 실리콘 건을 능숙하게 다루는 것이 쉽지는 않았지만 곧 요령이 붙기 시작했다.
+        약 1시간 동안 집중해서 밀봉 작업을 진행했다. 빈틈 하나하나가 메워질 때마다 성취감이 들었다. 단단히 밀봉된 벽을 보니 든든한 마음이 들었다.
+        <img src="../../image/brunch/20240501_tile2.jpg" alt="" width="100%">
+        작업을 마치고 난 후에는 뿌듯함이 밀려왔다. 비록 작은 일이지만 내 손으로 집을 한결 더 살기 좋게 만들었다는 자부심이 생겼다. 기분이 좋았다.
           
         </p> 
         <a class="home-button" href="../../brunch.html"> Go Back to Brunch Page</a>
