--- a/brunch.html
+++ b/brunch.html
@@ -196,7 +196,7 @@
 
         <h3>10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</h3>    
                 <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-                    <img src="image/brunch/20240501_ford.jpgjpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                    <img src="image/brunch/20240501_ford.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
                 </a>
 
         <h3>개미 통로를 막아라.</h3>    
