--- a/usa.html
+++ b/usa.html
@@ -129,10 +129,10 @@
             <strong>
                    주택구매 <br><br>
                   </strong>
-                    <a href="usa/usa sub 20240502_01.html" target="_blank">2024년3월15일<br> (CNN : 미국 부동산 수수료 체계 100년만에 뒤바뀌다.)</a> <br>
-                    <a href="usa/usa sub 20240502_02.html" target="_blank">2024년3월22일<br> (Bankrate : 미국 부동산 수수료 체계 새 규정 7월 발효)</a> <br>
-                    <a href="usa/usa sub 20240502_03.html" target="_blank">2024년3월15일<br> (USA Today : 부동산 수수료가 줄어든다.)</a> <br>
-                    <a href="usa/usa sub 20240502_06.html" target="_blank">2024년1월02일<br> (ROCKET : 2024년에 가장 저렴한 주 15개)</a> <br>
+                    <a href="usa/usa sub 20240502_01.html" target="_blank">2024년3월15일 (CNN : 미국 부동산 수수료 체계 100년만에 뒤바뀌다.)</a> <br>
+                    <a href="usa/usa sub 20240502_02.html" target="_blank">2024년3월22일 (Bankrate : 미국 부동산 수수료 체계 새 규정 7월 발효)</a> <br>
+                    <a href="usa/usa sub 20240502_03.html" target="_blank">2024년3월15일 (USA Today : 부동산 수수료가 줄어든다.)</a> <br>
+                    <a href="usa/usa sub 20240502_06.html" target="_blank">2024년1월02일 (ROCKET : 2024년에 가장 저렴한 주 15개)</a> <br>
             </p>
         </li>
         <!-- 이곳에 더 많은 표현을 추가할 수 있습니다 -->
