--- a/brunch/diary/brunch sub 20240504_01.html
+++ b/brunch/diary/brunch sub 20240504_01.html
@@ -122,7 +122,7 @@
         <h2>2024년 5월 04일 토요일, 큰애 대학교 졸업식날</h2>
         <p>Written by Claude 3.0 Opus</p>
         
-        <img src="../../image/brunch/20240504_grad1.png" alt="미시간 대학교 스타디움에서 열린 졸업식 사진">
+        <img src="../../image/brunch/20240504_grad1.png" alt="미시간 대학교 스타디움에서 열린 졸업식 사진" width="100%">
 
         <p>오늘은 큰 애의 대학교 졸업식이 있는 날이었다. 큰 애는 미시간 대학교 앤아버 캠퍼스를 졸업한다. 우리 가족은 이 뜻깊은 날을 함께 하기 위해 아침부터 부산을 떨며 아침 일찍 출발했다.</p>
 
@@ -130,7 +130,7 @@
 
         <p>스타디움에 들어가기 전, 우리는 간단한 점심을 사먹기로 했다. 햄버거 2개와 물 한 병, 콜라 한 병을 샀는데 무려 28달러나 했다. 비싼 가격이었다.</p>
 
-        <img src="../../image/brunch/20240504_grad2.jpg" alt="미시간 대학교 졸업식 행사 사진">
+        <img src="../../image/brunch/20240504_grad2.jpg" alt="미시간 대학교 졸업식 행사 사진" width="100%">
 
         <p>드디어 졸업식이 시작되었다. 식은 무려 3시간이 넘게 진행되었다. 사실 좀 지루한 면이 없지 않아 있었다. 웅장한 스타디움 안에서 마이크로 전달되는 연설자들의 목소리가 메아리쳐서 제대로 알아듣기가 힘들었던 것도 사실이다.</p>
 
