--- a/battery.html
+++ b/battery.html
@@ -11,10 +11,10 @@
     })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
     <!-- End Google Tag Manager -->
 
-<meta charset="utf-8"/>
-<title>
-    리튬 이온 배터리
-  </title>
+  <meta charset="utf-8"/>
+  <title>전고체 배터리 - 차세대 배터리 기술의 현황과 전망</title>
+  <meta name="description" content="전고체 배터리는 차세대 배터리 기술로 주목받고 있습니다. 이 페이지에서는 전고체 배터리의 원리, 장점, 상용화 현황 등에 대한 다양한 기사와 정보를 소개합니다. 전고체 배터리가 가져올 미래 변화와 가능성을 살펴보세요.">
+  
 
   <style>
     body {
