--- a/english.html
+++ b/english.html
@@ -2,6 +2,15 @@
 
 <html lang="ko">
 <head>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
+    <!-- End Google Tag Manager -->
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMQ4MLP54Y"></script>
     <script>
@@ -11,7 +20,7 @@
 
     gtag('config', 'G-HMQ4MLP54Y');
     </script>
-<meta charset="utf-8"/>
+<!-- <meta charset="utf-8"/>
 <title>
    10년이상 수집한 미국 엔지니어들의 영어 표현 대방출
 
@@ -21,7 +30,13 @@
     학습자 수준 맞춤: 초보자부터 고급 사용자까지, 각 사용자의 영어 수준에 따라 최적화된 컨텐츠를 제공합니다. 학습 경로를 추천하는 기능을 통해 사용자의 학습 과정을 더욱 효과적으로 지원합니다.
     커뮤니티 & 피드백: 실시간 피드백 기능을 통해 사용자의 질문에 빠르게 응답합니다. 커뮤니티 기능을 통해 다른 학습자들과 정보 공유, 질문, 토론을 할 수 있습니다.
     이외에도 다양한 추가 기능들로, 영어 학습 경험을 풍부하게 해드립니다. 지금 바로 가입하시고 영어 학습의 새로운 차원을 경험해보세요!
-  </title>
+  </title> -->
+
+  <meta charset="utf-8"/>
+  <title>미국 엔지니어들이 자주 쓰는 영어 표현 모음 - 실용적인 영어 학습</title>
+  <meta name="description" content="10년 이상 미국에서 엔지니어로 근무하며 수집한 실용적인 영어 표현들을 상황별로 분류하여 제공합니다. 업무, 이메일, 회의 등 다양한 상황에서 활용할 수 있는 영어 표현을 예문과 함께 학습할 수 있습니다. 미국 엔지니어들의 실제 언어 사용 패턴을 파악하고 영어 실력을 향상시켜 보세요.">
+
+  
 <style>
    body {
             font-family: Arial, sans-serif;
@@ -63,7 +78,7 @@
    .home-button {
     display: inline-block;
     padding: 20px 100px;
-    font-size: 32px;
+    font-size: 64px;
     color: white;
     background-color: blue;
     border: none;
