--- a/brunch/diary/brunch sub 20240504_02.html
+++ b/brunch/diary/brunch sub 20240504_02.html
@@ -11,8 +11,8 @@
         <!-- <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="큰애의 미시간 대학교 앤아버 캠퍼스 졸업식 후기를 인공지능 AI Claude와 함께 써보았습니다. 10만 명을 수용하는 거대한 미시간 대학교 스타디움에서 열린 졸업식 현장과 함께 부모로서의 감동을 담아보았습니다. 사회로 첫발을 내딛는 자녀에 대한 사랑과 응원의 마음을 전합니다.">
-        <title>큰애 대학교 졸업식 이야기 - 인공지능 AI Claude와 함께 쓴 감동적인 하루 | 미시간 대학교 앤아버 캠퍼스 졸업식 후기</title> 
+        <meta name="description" content="초라해진 라일락 나무의 가지치기에서 깨달은 삶의 지혜 - 때로는 과감한 결정과 변화가 필요하다">
+        <title>가지치기의 계절: 변화를 두려워하지 않는 삶의 자세에 대하여</title> 
 
 
         
