--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ window.onload = function() {
             display: inline-block;
             text-align: center;
             cursor: pointer;
-            font-size: 3em;
+            font-size: 2.5em;
         }
 
         .sidebar a:hover {
@@ -165,17 +165,17 @@ window.onload = function() {
 }
 </style>
 <div class="sidebar" style="left: 0; transition: left 2s;">
-    <a href="english.html">English</a>
-    <a href="brunch.html">Brunch</a>
-    <a href="usa.html">USA</a>
-    <a href="AI_Sites.html">AI Site</a>
-    <a href="AI_News.html">AI News</a>
-    <a href="fortune.html">Fortune</a>
-    <a href="battery.html">Battery</a>  
-    <a href="robot.html">Robot</a>  
-    <a href="drone.html">Drone</a>  
-    <a href="python.html">Python</a>
-    <a href="vba.html">Excel</a>
+    <a href="english.html">영어표현</a>
+    <a href="brunch.html">소소한 일상</a>
+    <a href="usa.html">미국생활</a>
+    <a href="AI_Sites.html">인공지능 사이트</a>
+    <a href="AI_News.html">인공지능 뉴스</a>
+    <a href="fortune.html">운세</a>
+    <a href="battery.html">배터리</a>  
+    <a href="robot.html">로봇</a>  
+    <a href="drone.html">드론</a>  
+    <a href="python.html">파이선</a>
+    <a href="vba.html">엑셀 VBA</a>
 </div>
 <div class="content">
 <script>
