--- a/battery.html
+++ b/battery.html
@@ -39,7 +39,8 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 5px;
         padding: 2rem;
-        font-size: 18px;
+        /* font-size: 18px; */
+        font-size: 40px;
     }
 
     @media screen and (max-width: 600px) {
@@ -133,17 +134,20 @@
     <ul>
 
 
-        <h1>전고체 배터리</h1>    
+        <h1>차세대 배터리</h1>    
 
 
         <a href="battery/battery sub 20240429_09.html" target="_blank"> <h3>2024년04월24일 : Faster Charging and Increased Range? Solid State Batteries for EVs Explained</h3><br><br>
             <img src="image/battery/battery sub 20240429_09.png" alt="" width="100%">
         </a>
         <br><br><br>
+
         <a href="battery/battery sub 20240429_06.html" target="_blank"> <h3>2024년04월02일 : 전고체 전지</a></h3>
         <br><br><br>
+
         <a href="battery/battery sub 20240429_05.html" target="_blank"> <h3>2024년04월02일 : ‘전고체 배터리’, 더 안전하게 사용하는 방법 찾았다</a></h3>
         <br><br><br>
+
         <a href="battery/battery sub 20240429_08.html" target="_blank"> <h3>2024년03월25일 : '전고체' '리튬황' 차세대 배터리 상용화 어디까지 왔나</h3>
             <img src="image/battery/battery sub 20240429_08.png" alt="" width="100%">
         </a>
