--- a/AI_News.html
+++ b/AI_News.html
@@ -12,10 +12,12 @@
     })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
     <!-- End Google Tag Manager -->
 
-<meta charset="utf-8"/>
-<title>
-    인공지능 뉴스 (AI News)
-  </title>
+    <title>인공지능(AI) 관련 뉴스 모음 - ChatGPT, 이미지 생성, 음성 합성 등</title>
+    <meta name="description" content="ChatGPT, 미드저니 등 인공지능 관련 유용한 뉴스를 한 곳에 모았습니다. 챗봇, 이미지 생성, 음성 합성, 동영상 편집 등 다양한 AI 도구를 살펴보세요.">
+    <meta name="keywords" content="인공지능, AI, ChatGPT, 미드저니, 음성합성, TTS, 이미지생성, 비디오편집, 프롬프트, 웹사이트제작, 뉴스">
+    <meta name="author" content="stberry">
+    <link rel="canonical">
+
 <style>
    body {
             font-family: Arial, sans-serif;
