--- a/AI_Sites.html
+++ b/AI_Sites.html
@@ -3,10 +3,22 @@
 
 <html lang="ko">
 <head>
-<meta charset="utf-8"/>
-<title>
-    인공지능 (AI)
-  </title>
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-P5MQZ5LK');</script>
+  <!-- End Google Tag Manager -->
+  
+
+  <title>인공지능(AI) 관련 사이트 모음 - ChatGPT, 이미지 생성, 음성 합성 등</title>
+  <meta name="description" content="ChatGPT, 미드저니 등 인공지능 관련 유용한 사이트를 한 곳에 모았습니다. 챗봇, 이미지 생성, 음성 합성, 동영상 편집 등 다양한 AI 도구를 살펴보세요.">
+  <meta name="keywords" content="인공지능, AI, ChatGPT, 미드저니, 음성합성, TTS, 이미지생성, 비디오편집, 프롬프트, 웹사이트제작">
+  <meta name="author" content="stberry">
+  <link rel="canonical">
+  
 <style>
    body {
             font-family: Arial, sans-serif;
